# pdf-local-llm

./: README.md  main.ipynb  pyproject.toml
