[tool.poetry]
package-mode = false
name = "doc-loader-pdf-llm"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
pypdf = "^5.1.0"
langchain-core = "^0.3.43"
langchain-openai = "^0.3.8"
langchain-community = "^0.3.19"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipython = "^8.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
