[project]
name = "pdf-local-llm"
package-mode = false
version = "0.1.0"
description = ""
authors = [
    { name = "Michael Currin", email = "18750745+MichaelCurrin@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pypdf (>=5.3.1,<6.0.0)",
    "langchain-core (>=0.3.44,<0.4.0)",
    "langchain-openai (>=0.3.8,<0.4.0)",
    "langchain-community (>=0.3.19,<0.4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipython = "^9.0.2"
